--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "eslint": "^7.14.0",
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^7.0.0",
-    "prettier": "^2.5.1"
+    "prettier": "^2.5.1",
+    "strip-ansi": "^3.0.1"
   },
   "browserslist": [
     "last 10 Chrome versions",
