--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "quasar": "^2.0.0",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0",
-    "vuex": "^4.0.1"
+    "vuex": "^4.0.1",
+    "vuex-persist": "^3.1.3"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.13.14",
