--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
     "@quasar/extras": "^1.0.0",
     "@vuelidate/core": "^2.0.0-alpha.35",
     "@vuelidate/validators": "^2.0.0-alpha.27",
+    "app-webpack": "^1.0.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
     "quasar": "^2.0.0",
+    "socket.io-client": "^4.4.1",
     "vue": "^3.0.0",
     "vue-router": "^4.0.0",
     "vuex": "^4.0.1",
