--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "app-webpack": "^1.0.0",
     "axios": "^0.21.1",
     "core-js": "^3.6.5",
+    "luxon": "^2.3.2",
     "quasar": "^2.0.0",
     "socket.io-client": "^4.4.1",
     "vue": "^3.0.0",
@@ -27,6 +28,7 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.13.14",
     "@quasar/app": "^3.0.0",
+    "@types/luxon": "^2.3.1",
     "@types/node": "^12.20.21",
     "@typescript-eslint/eslint-plugin": "^5.10.0",
     "@typescript-eslint/parser": "^5.10.0",
