--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
     "eslint-config-prettier": "^8.1.0",
     "eslint-plugin-vue": "^7.0.0",
     "prettier": "^2.5.1",
-    "strip-ansi": "^3.0.1"
+    "strip-ansi": "^3.0.1",
+    "workbox-webpack-plugin": "^6.5.3"
   },
   "browserslist": [
     "last 10 Chrome versions",
